--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "custom-error-with-redirects-bug",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "^20.4.8",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "eslint": "^8.47.0",
-    "eslint-config-next": "^13.4.19",
-    "next": "^13.4.20-canary.6",
+    "@types/node": "^20.8.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.9",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^13.5.5-canary.1",
+    "next": "^13.5.5-canary.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^5.2.2"
